# ironbeam-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
examples/: account.rs  all_accounts.rs  front_month.rs  info.rs  market.rs  orders.rs  simulation.rs  streaming.rs  streaming_indicators.rs  streaming_market_data.rs
specs/: API.md  README.md  account.md  auth.md  info.md  market-data.md  openapi.json  orders.md  simulation.md  streaming.md  types.md
src/: error.rs  lib.rs
src/client/: config.rs  http.rs  mod.rs  rate_limiter.rs
src/client/rest/: account.rs  auth.rs  info.rs  market.rs  mod.rs  orders.rs  simulation.rs
src/client/stream/: connection.rs  handler.rs  mod.rs  subscriptions.rs
src/types/: account.rs  aliases.rs  common.rs  enums.rs  info.rs  market.rs  mod.rs  order.rs  requests.rs  responses.rs  security.rs  streaming.rs
