[package]
name = "ironbeam-rs"
version = "0.1.0"
edition = "2024"
description = "Async Rust client for the Ironbeam futures trading API"
license = "MIT"
repository = "https://github.com/wboayue/ironbeam-rs"
keywords = ["futures", "trading", "ironbeam", "finance", "async"]
categories = ["api-bindings", "finance"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "net", "sync", "time", "macros"] }
tracing = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http1", "ring", "webpki-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
bytes = "1"
http-body-util = "0.1"
fastwebsockets = { version = "0.8", features = ["upgrade"] }
tokio-rustls = "0.26"
urlencoding = "2"
webpki-roots = "0.26"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3"
